# us-mortgage-analysis

./: .gitignore  README.md  journal.md  pyproject.toml
src/notebooks/: 01_loading.ipynb  02_eda.ipynb
