[tool.poetry]
name = "us-mortgage-analysis"
version = "0.1.0"
description = ""
authors = ["Ruslan Useinov <r.useinov23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
